# libiban

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in
src/: libiban.cpp  libiban.h  utils.cpp  utils.h
test/: main.cpp
